<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Sporthenon</string>
    <string name="app_version" translatable="false">V2.3</string>
    <string name="env" translatable="false">prod</string><!-- local|prod -->
    <string name="url" translatable="false">https://sporthenon.com</string>
    <!--<string name="url" translatable="false">http://10.0.2.2</string>-->
    <string name="select.language">Select Language</string>
    <string name="english" translatable="false">English</string>
    <string name="francais" translatable="false">Français</string>
    <string name="ok">OK</string>
    <string name="sport">Sport</string>
    <string name="championship">Championship</string>
    <string name="event">Event</string>
    <string name="results">Results</string>
    <string name="result1">Result</string>
    <string name="details">Details</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="error">ERROR - Not found</string>
    <string name="winrec">Record</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="result">Result</string>
    <string name="score">Score</string>
    <string name="olympic.games">Olympic Games</string>
    <string name="ol.winter">Winter Olympic Games</string>
    <string name="ol.summer">Summer Olympic Games</string>
    <string name="ol.podium">Event results</string>
    <string name="ol.medals">Medals table</string>
    <string name="us.type1" translatable="false">Championships</string>
    <string name="us.type2" translatable="false">Records</string>
    <string name="us.type3" translatable="false">Stats Leaders</string>
    <string name="us.type4" translatable="false">Hall of Fame</string>
    <string name="us.type5" translatable="false">Retired Numbers</string>
    <string name="us.type6" translatable="false">Team Stadiums</string>
    <string name="rc.individual" translatable="false">Individual</string>
    <string name="rc.team" translatable="false">Team</string>
    <string name="rc.both" translatable="false">Both</string>
    <string name="records">Records</string>
    <string name="stats">Statistics</string>
    <string name="filter">Filter</string>
    <string name="nfl" translatable="false">NFL</string>
    <string name="nba" translatable="false">NBA</string>
    <string name="nhl" translatable="false">NHL</string>
    <string name="mlb" translatable="false">MLB</string>

    <string name="title_results">Results</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_olympics">Olympics</string>
    <string name="title_us_leagues">US Leagues</string>
    <string name="title_last_updates">Last updates</string>
    <string name="title_settings">Settings</string>

    <string name="month.1">January</string>
    <string name="month.2">February</string>
    <string name="month.3">March</string>
    <string name="month.4">April</string>
    <string name="month.5">May</string>
    <string name="month.6">June</string>
    <string name="month.7">July</string>
    <string name="month.8">August</string>
    <string name="month.9">September</string>
    <string name="month.10">October</string>
    <string name="month.11">November</string>
    <string name="month.12">December</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

</resources>