<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#EAEAEA">

    <TextView
        android:id="@+id/lang_msg"
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="12dip"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="#888"
        android:layout_marginBottom="10dip"
        android:text="Select a language"
        />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lang_msg"
        android:orientation="vertical"
        android:layout_marginStart="15dip">
        <RadioButton
            android:id="@+id/langEN"
            style="@style/CustomRadio"
            android:checked="true"
            android:drawableStart="@drawable/flag_en"
            android:drawablePadding="5dip"
            android:padding="6dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dip"
            android:text="@string/english">
        </RadioButton>

        <RadioButton
            android:id="@+id/langFR"
            style="@style/CustomRadio"
            android:drawableStart="@drawable/flag_fr"
            android:drawablePadding="5dip"
            android:padding="6dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/langEN"
            android:text="@string/francais">
        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/selector"
        android:textSize="18sp"
        android:textColor="#000"
        android:text="@string/ok">
    </Button>

</RelativeLayout>